--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -2,7 +2,8 @@
 .row-fluid
   .span12
     .span6
-     
+      #titlebox
+        = image_tag "widetitlebox.png"      
     .span6
       = link_to index_path do
         #homelogo
