--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -75,7 +75,8 @@ body, html{
   margin-top: 30px;
   margin-left: 30px;
   margin-right: -30px;
-  
+  max-width: 85%;
+  max-height: auto
 }
 
 #homeposts {
