resized titlebox to 450

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -3,7 +3,7 @@
   .span12
     .span6
       #titlebox
-        = image_tag "widetitlebox.png" :size => "200x50"    
+        = image_tag "widetitlebox.png", width: 450    
     .span6
       = link_to index_path do
         #homelogo
