--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -14,7 +14,7 @@
           =link_to "RateMyStudyAbroad.com,", "http://ratemystudyabroad.com"
           an independent website for student reviews of study abroad programs, now the review website partner of 
           =link_to "GoAbroad.com.", "http://goabroad.com"
-          I spent one year living in an internet-free cottage owned by my father in Baltimore County reading philosophy and literature beginning with Homer and the Pre-Socratic philosophers.  I am now a Junior Ruby on Rails developer at Colorado-based White Cheetah. In Spring of 2014 I plan to study for a masters in philosophy in Berlin.
+          I spent one year living in an internet-free cottage owned by my father in Baltimore County reading philosophy and literature beginning with Homer and the Pre-Socratic philosophers. By trade I am a Ruby on Rails web developer. I live in Berlin.
 
         %br
           I am happy to talk: henryvw@gmail.com.
