--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %title Stoic Hacks
+    %meta{:content => "Stoic Hacks explores how we can use the ancient Greek and Roman Stoic school of philosophy to help us think about life today.", :name => "description"}/
     = stylesheet_link_tag    "application", :media => "all"
     = javascript_include_tag "application"
     = csrf_meta_tags
